assets/css/style.css
html {
  max-width: 90ch;
  margin: auto;
}

/* Font size */

body{
  font-size: 18px;
}

/* Colours */

body {
  background-color: #000000;
  color: #00FFFB;
}

.link {
  color: #FFFF00;
  text-decoration: none;
}

.link:visited {
  color: #FFA500;
}
.link:hover {
  text-decoration: underline;
}

/* Header */

header {
  text-align: center;
  padding: 20px;
  padding-top: 60px;
  display: flex;
  justify-content: space-between;
  align-items: center;
}

/* Fixed navigation menu at the top */
.menu {
  background-color: #333;
  color: white;
  position: fixed;
  width: 100%;
  top: 0;
  left: 0;
  z-index: 1000;
}

.menu ul {
  list-style: none;
  margin: 0;
  padding: 0;
  display: flex;
  justify-content: center;
}

.menu ul li {
  position: relative;
}

.menu ul li a {
  display: flex;
  align-items: center;
  justify-content: center;
  height: 100%;
  padding: 0 20px;
  color: white;
  text-decoration: none;
}

.menu ul li a:hover {
  background-color: #575757;
}

/* Style for the drop-down menu */
.menu ul ul {
  display: none;
  position: absolute;
  top: 100%;
  left: 0;
  background-color: #333;
  padding: 0;
  margin: 0;
}

.menu ul ul li a {
  padding: 10px 20px;
}

.menu ul li:hover > ul {
  display: block;
}

img.email {
  vertical-align: middle;
}

.menu-toggle {
  display: none;
}

/* Style for the footer */

.contactIssue {
  margin-top: 50px;
  display: flex;
  justify-content: space-between;
  border-bottom: 1px solid #FFFF00;
  border-top: 1px solid #FFFF00;
}

.copyright{
  text-align: center;
}

/* Media query for border margins */

@media (max-width: 120ch) {
  html {
    margin: auto 10ch auto 5ch;
  }
}


/* Media query for 700px */
@media screen and (max-width: 120ch) {

  header {
    flex-direction: column;
    align-items: center;
  }

  .menu ul {
    display: none;
    flex-direction: column;
    position: absolute;
    top: 40px; /* Ajusta según la altura de tu header */
    left: 0;
    width: 100%;
    background-color: #333;
    z-index: 1;
  }

  .menu ul.active {
    display: flex;
  }

  .menu ul li {
    text-align: center;
    margin: 10px 0;
  }

  .menu-toggle {
    display: block;
    cursor: pointer;
    padding: 10px;
    color: white;
    font-size: 18px;
  }

  .menu-toggle:hover {
    background-color: rgba(255, 255, 255, 0.1);
  }
}

/* Light mode styles */

.toggle-button {
  all: unset;
  display: flex;
  align-items: center;
  justify-content: center;
  padding: 10px;
  cursor: pointer;
}

.toggle-icon {
  width: 100%;
  height: 100%;
  max-width: 40px; /* Ajusta según el tamaño deseado dentro del menú */
  max-height: 40px; /* Mantiene una proporción razonable */
  object-fit: contain; /* Mantiene la proporción de la imagen sin distorsionar */
}

body.light-theme {
  background-color: white;
  color: black;
}

body.light-theme header {
  background-color: white;
  color: black;
}

body.light-theme .link {
  color: #0A00A4;
}

body.light-theme {
  .contactIssue {
    border-bottom: 1px solid #0f0052;
    border-top: 1px solid #0f0052;
  }
}

